# lab2-unit-tests-mluenv00

./: CMakeLists.txt  README.md  compilation.sh  exampleFunction.cpp  f  testoutput.txt  testoutputerrors.txt  tests.cpp
